# fanucpy

./: pyproject.toml
src/fanuc-driver/: mappdk.ls  mappdk.tp  mappdk_cmd.kl  mappdk_comm.kl  mappdk_logger.kl  mappdk_logger.pc  mappdk_move.tp  mappdk_movel.tp  mappdk_server.kl  mappdk_server.pc
src/fanucpy/: robot.py
