[project]
name = "fanucpy"
version = "0.1.15"
description = ""
authors = [
    {name = "Josjah",email = "504457@student.fontys.nl"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "poetry-core (>=2.0.0,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
